test/sema/imported-c-header-has-file-scope.delta
// RUN: %check_errors %not %delta -typecheck -I%p/inputs/imported-c-header-has-file-scope %s %p/inputs/imported-c-header-has-file-scope/second-file.delta

import "a.h"

// CHECK: second-file.delta:2:5: error: unknown identifier 'foo'
